refactor: CustomDiaryRepositoryImpl 리팩토링